<resources>
    <string name="app_name">Gets Supplement</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_map">Map</string>
    <string name="title_queue">Obstacles</string>
    <string name="title_privacy">Privacy</string>
    <string name="title_about">About</string>
    <string name="title_settings">Settings</string>
    <string name="empty">No items</string>
    <string name="disability">Disability</string>
    <string name="str_point_name">Point name</string>
    <string name="choose_category">Choose category</string>
    <string name="activity_addpoint_magnet_info">Activate point magnet</string>
    <string name="activity_addnewpoint_mapview_info">To change marker location, click on the desirable location at the map</string>
</resources>
